--- a/app/views/projects/_select_add_current_user_to_project.html.erb
+++ b/app/views/projects/_select_add_current_user_to_project.html.erb
@@ -6,7 +6,7 @@
     </p>
 
     <div class='form-group'>
-      <%= check_box_tag :add_current_user, '1', false, :id => 'default_member[add_to_project]',:name=>'default_member[add_to_project]' %> Add me to this <%= t('project') %> and
+      <%= check_box_tag :add_current_user, '1', true, :id => 'default_member[add_to_project]',:name=>'default_member[add_to_project]' %> Add me to this <%= t('project') %> and
       make me the <%= t('project_administrator') %>.
     </div>
     <div class='form-group' id='institution' style='display:none;'>
