--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,6 +20,16 @@
           <%= text_or_not_specified(@project.web_page,:external_link=>true) %>
         </p>
 
+        <p>
+          <strong>Target Completion Date:</strong> 
+          <%= date_as_string(@project.target_completion, false) -%>
+        </p>
+
+        <p>
+          <strong>Project Status</strong> 
+          <%= @project.project_status %>
+        </p>
+
         <% unless hide_contact_details?(@project) %>
             <p>
               <strong>Internal web page:</strong>
@@ -29,7 +39,7 @@
 
         <% if Seek::Config.organisms_enabled %>
             <p>
-              <strong>Status(es):</strong>
+              <strong>Organisms:</strong>
               <%= organisms_link_list @project.organisms -%>
             </p>
         <% end %>
