--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -35,7 +35,7 @@
     <div class="ft-info">          
       Copyright &copy; 2008 - 2018
       <%= link_to "The University of Manchester", "http://www.manchester.ac.uk/", :target => '_blank' %> and
-      <%= link_to "Richard D. Berlin Center for Cell Analysis & Modeling", "https://health.uconn.edu/cell-analysis-modeling/", :target => '_blank' %> and
+      <%= link_to "HITS gGmbH", "http://www.h-its.org/", :target => '_blank' %> 
       <% if Seek::Config.copyright_addendum_enabled  %>
         <br/><%= Seek::Config.copyright_addendum_content.html_safe%>
       <% end %>
