--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -24,7 +24,7 @@
 
 <div class="form-group">
   <%= f.label "Project Status" -%>
-  <%= f.select :project_status, options_for_select(["Looking for a modeler", "Looking for an experimentalist", "Looking for modelers and experimentalist"]),:class => "form-control" %>
+  <%= f.select :project_status, options_for_select(Seek::Util.project_statuses), {:include_blank => true} -%>
 </div>
 
 <div class="form-group">
