--- a/app/views/projects/_organisms_selection.html.erb
+++ b/app/views/projects/_organisms_selection.html.erb
@@ -1,4 +1,4 @@
-<%= panel("Statuses Relevant To This #{t('project')}") do %>
+<%= panel("Organisms Relevant To This #{t('project')}") do %>
     <div class="row">
       <div class="col-sm-6" id="organism_create_info">
          <p class='alert alert-info' style="width:98%;text-align:center;margin-bottom:1em;">
