--- a/app/views/projects/_resource_list_item.html.erb
+++ b/app/views/projects/_resource_list_item.html.erb
@@ -11,6 +11,8 @@
   </div>
 
   <div class="col-sm-6 hidden-xs">
-    <%= list_item_simple_list resource.organisms, "Status" %>
+    <%= list_item_simple_list resource.organisms, "Organisms" %> 
+    <%= list_item_optional_attribute "Project Status", h(resource.project_status), h(resource.project_status) %>
+    <%= list_item_optional_attribute "Target Completion Date", h(resource.target_completion), h(resource.target_completion) %>
   </div>
 </div>
