--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,14 +36,14 @@
           </div>
 
           <div class="form-group">
-            <label>Email address</label>
+            <label>Email address (not visible to public)</label>
             <%= f.text_field :email, :class => 'form-control' %>
           </div>
 
           <div class="form-group">
-            <label>Password</label>
+            <label>Password</label><p class="help-block">Password should contain a minimum of <%= User::MIN_PASSWORD_LENGTH %> characters.</p>
             <%= f.password_field :password, :class => 'form-control' %>
-            <p class="help-block">Password should contain a minimum of <%= User::MIN_PASSWORD_LENGTH %> characters.</p>
+<!--            <p class="help-block">Password should contain a minimum of <%= User::MIN_PASSWORD_LENGTH %> characters.</p> ->
           </div>
 
           <div class="form-group">
