--- a/app/views/projects/_resource_list_item.html.erb
+++ b/app/views/projects/_resource_list_item.html.erb
@@ -4,15 +4,19 @@
   <div class="col-sm-6">
     <%= list_item_programme_attribute(resource) if Seek::Config.programmes_enabled %>
     <%= list_item_optional_attribute "Public web page", h(resource.web_page), h(resource.web_page) %>
+    <% if logged_in_and_registered? %>
+      <%= list_item_simple_list resource.project_administrators, "Project PI(s)"%>
+    <% end %>
 
-    <% unless hide_contact_details?(resource) %>
+    <%= list_item_simple_list resource.institutions, "Institutions" %>
+    <% if false %> <%# unless hide_contact_details?(resource) %>
         <%= list_item_optional_attribute "Internal web page", h(resource.wiki_page), h(resource.wiki_page) %>
     <% end %>
   </div>
 
   <div class="col-sm-6 hidden-xs">
     <%= list_item_simple_list resource.organisms, "Organisms" %> 
-    <%= list_item_optional_attribute "Project Status", h(resource.project_status), h(resource.project_status) %>
-    <%= list_item_optional_attribute "Target Completion Date", h(resource.target_completion), h(resource.target_completion) %>
+    <%= list_item_optional_attribute "Project Status", h(resource.project_status) %> 
+    <%= list_item_optional_attribute "Target Completion Date", h(resource.target_completion) %> 
   </div>
 </div>
