--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,16 +19,12 @@
 <% else  %>
   <div class="row">
     <div class="col-md-5 col-md-push-7">
-
-
     </div>
     <div class="col-md-7 col-md-pull-5">
       <p style="text-align:right">
         <%= help_link :registering,link_text:'Registration guide',include_icon:true %>
       </p>
       <%= form_for @user do |f| -%>
-
-
           <div class="form-group">
             <label>Login name</label>
             <%= f.text_field :login, :class => 'form-control' %>
@@ -41,9 +37,9 @@
           </div>
 
           <div class="form-group">
-            <label>Password</label><p class="help-block">Password should contain a minimum of <%= User::MIN_PASSWORD_LENGTH %> characters.</p>
+            <label>Password</label>
             <%= f.password_field :password, :class => 'form-control' %>
-<!--            <p class="help-block">Password should contain a minimum of <%= User::MIN_PASSWORD_LENGTH %> characters.</p> ->
+            <p class="help-block">Password should contain a minimum of <%= User::MIN_PASSWORD_LENGTH %> characters.</p> 
           </div>
 
           <div class="form-group">
