--- a/app/views/layouts/navbar/_browse_menu.html.erb
+++ b/app/views/layouts/navbar/_browse_menu.html.erb
@@ -11,7 +11,8 @@
     <li><%= link_to "Institutions", institutions_path %></li>
     <li><%= link_to "People", people_path %></li>     
     <li><%= link_to t("document").pluralize, documents_path %></li>
-  
+    <li><%= link_to "Publications", publications_path %></li>
+
     <% if false %>
       <li role="presentation" class="dropdown-header"><%= t("menu.isa") -%></li>
       <%# if Seek::Config.programmes_enabled %>
