--- a/app/views/layouts/navbar/_navbar.html.erb
+++ b/app/views/layouts/navbar/_navbar.html.erb
@@ -24,7 +24,7 @@
       </ul>
 
       <%= render :partial => 'layouts/navbar/search_bar' if Seek::Config.solr_enabled %>
-      <ul class="nav navbar-nav navbar-right"> 
+      <ul class="nav navbar-nav"> 
 	<li><%= link_to('Advanced Search', new_advanced_search_path) %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
