--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -41,7 +41,7 @@
       <% end %>
       <br/>
       Additional development completed at 
-      <%= link_to "University of Connecticut CCAM Microscopy Facility", "https://health.uconn.edu/cell-analysis-modeling/microscopy-facility-2/", :target => '_blank' %> and
+      <%= link_to "University of Connecticut CCAM", "https://health.uconn.edu/cell-analysis-modeling/microscopy-facility-2/", :target => '_blank' %> and
       <%= link_to "The University of Illinois at Chicago", "https://www.uic.edu/", :target => '_blank' %>
     </div>
   </div>
