--- a/app/views/layouts/navbar/_browse_menu.html.erb
+++ b/app/views/layouts/navbar/_browse_menu.html.erb
@@ -7,11 +7,46 @@
   <ul class="dropdown-menu" role="menu">
     <li role="presentation" class="dropdown-header visible-md">Browse</li>
     <!-- <li role="presentation" class="dropdown-header"><%# <%= t("menu.yellow_pages") - %></li>-->
-    <li><%= link_to t("project").pluralize, projects_path %></li>
-    <li><%= link_to "Institutions", institutions_path %></li>
-    <li><%= link_to "People", people_path %></li>     
-    <li><%= link_to "Publications", publications_path %></li>
-    <li><%= link_to t("document").pluralize, documents_path %></li>
+    <li> 
+      <a href="<%= projects_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('project', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        <%= t("project").pluralize %>
+      </a>
+    </li>
+    <li> 
+      <a href="<%= institutions_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('institution', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Institutions
+      </a>
+    </li>
+    <li> 
+      <a href="<%= people_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('person', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        People
+      </a>
+    </li>
+    <li> 
+      <a href="<%= publications_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('publication', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Publications
+      </a>
+    </li>
+    <li> 
+      <a href="<%= documents_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('document', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Documents
+      </a>
+    </li>
 
     <% if false %>
       <li role="presentation" class="dropdown-header"><%= t("menu.isa") -%></li>
