--- a/app/views/layouts/navbar/_user_menu.html.erb
+++ b/app/views/layouts/navbar/_user_menu.html.erb
@@ -1,3 +1,23 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script>
+
+jQuery.noConflict();
+
+(function($) {
+
+$(document).ready(function(){
+  $('.dropdown a.project-drop').on("click", function(e){
+    $(this).next('ul').toggle();
+    e.stopPropagation();
+    e.preventDefault();
+  });
+});
+
+})(jQuery); 
+
+</script>
+<!-- <script>jQuery.noConflict();</script> -->
+
 <% if logged_in_and_registered? %>
     <li class="dropdown" id="user-menu">
       <a href="#" id="user-menu-button" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -10,20 +30,39 @@
         <span class="truncated-name" style="max-width: 12em"><%= current_person.name %></span>
         <span class="caret"></span>
       </a>
-      <ul class="dropdown-menu" role="menu">
-        <li><%= link_to 'My items', items_person_path(current_person) -%></li>
-        <% unless current_person.projects.empty? %>
-            <li role="presentation" style="padding:3px 20px; color:#333333; font-size:14px; margin-top:0px;"> My projects</li>
-            <% current_person.projects.each do |project| %>
-                <li class="project-item" style = "margin-left:3px; font-size:11.5px;"><%= link_to project.title, project_path(project), title: project.title -%></li>
-            <% end %>
-        <% end %>
-
+      <ul class="dropdown-menu" style="width:104%;" role="menu">
         <li><%= link_to 'My profile', person_path(current_person) -%></li>
 	<% if false %>
           <li><%= link_to 'Edit profile', edit_person_path(current_person) -%></li>
 	<% end %>
         <li><%= link_to 'Change password', edit_user_path(current_user) -%></li>
+
+        <li><%= link_to 'My items', items_person_path(current_person) -%></li>
+        <% unless current_person.projects.empty? %>
+            <li class="dropdown" style="padding:3px 0px; color:#333333; font-size:14px; margin-top:0px;">
+              <a href="#" class="dropdown-toggle project-drop" data-toggle="dropdown" role="button" aria-expanded="false">
+                <span class="hidden-md">My Projects</span>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" style="padding:0 0; width:100%; border:none; margin:0;" role="menu">
+                <li role="presentation" class="dropdown-header visible-md">My Projects</li>
+                <% current_person.projects.each do |project| %>
+                  <li class="project-item" style = "font-size:11.5px;">    
+                    <a href="<%= project_path(project) %>">
+		      <div style="margin-left:10px; display:inline-block;">
+                        <span style="margin-right:15px;float:left;">
+		  	  <%= avatar(project, 20) -%>
+                        </span>
+		        <span>
+                          <%= project.title %>
+                        </span>
+                      </div>
+		    </a>
+ 		  </li>
+                <% end %>
+              </ul>
+            </li>
+        <% end %>
 
         <li role="presentation" class="dropdown-header">
           My favourites
