--- a/app/views/people/_buttons.html.erb
+++ b/app/views/people/_buttons.html.erb
@@ -11,7 +11,21 @@
   <% end %>
 <% end %>
 
-<%= admin_dropdown('Management') do %>
+<% if (mine?(@person) || @person.can_be_edited_by?(current_user)) && !current_user.guest? -%>
+  <%= button_link_to "Edit Profile", "edit", edit_person_path(@person), 'data-tooltip' => tooltip("Edit name, description, disciplines, and more.") -%>
+  <%= button_link_to "Edit projects", "group_edit", edit_person_path(@person, :edit_roles=>true), 
+                     'data-tooltip' => tooltip("Edit roles within projects, subscriptions, and email announcements")-%>
+  <% if mine?(@person) -%>
+    <%= button_link_to "Change Password", "lock", url_for({:controller=>:users, :action=>:edit, :id=>@person.user}) -%> 
+  <% end -%>
+  <% if admin_logged_in? -%>
+    <%= button_link_to "Delete Person", "destroy", person_path(@person),  
+		       { data: { confirm: 'Are you sure?' }, :method => :delete} -%> 
+    <%#= image_tag_for_key "destroy", person_path(@person), "Delete Person", { data: { confirm: 'Are you sure?' }, :method => :delete}, "Delete Person" -%>
+  <% end -%>
+<% end %>
+
+<% if false %><%#= admin_dropdown('Management') do %>
   <% if (mine?(@person) || @person.can_be_edited_by?(current_user)) && !current_user.guest? -%>
       <li>
         <%= image_tag_for_key('edit', edit_person_path(@person), "Edit Person Profile", nil, 'Edit Profile') -%>
