--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -57,10 +57,10 @@
         </p>
       </div>
     </div>
-    <%= render :partial => "general/isa_graph", :locals => { :root_item => @publication, :deep => true, :include_parents => true } %>
+    <%#= render :partial => "general/isa_graph", :locals => { :root_item => @publication, :deep => true, :include_parents => true } %>
   </div>
   <div class="col-md-3 col-sm-4">
-    <%= render :partial => "assets/resource_main_content_right", :locals => { :resource => @publication, :authors_title=>"Creator", creators: []} -%>
+    <%= render :partial => "assets/resource_main_content_right", :locals => { :annotatable_resource => false, :resource => @publication, :authors_title=>"Creator", creators: []} -%>
   </div>
 </div>
 
