adding images, fix permission error, change navbar

--- a/app/views/homes/_home_contents.html.erb
+++ b/app/views/homes/_home_contents.html.erb
@@ -4,6 +4,9 @@
     <% end %>
 <% end %>
 
+<!-- <div style="margin:auto"><img src="assets/splash1-5eebcff204f0968e7edf885259dc969aa6281b3a6c6ebae2bd16680e900e4509.png" style="align:center;width:50%"></div> -->
+<%= image('splash2-wide', {width: "50%", class: "rounded"} ) -%>
+
 <div class="row">
   <div class="col-md-9">
     <%= render :partial=>"home_description_box" -%>
