--- a/app/views/projects/_buttons.html.erb
+++ b/app/views/projects/_buttons.html.erb
@@ -34,6 +34,7 @@
     <%= button_link_to("Edit #{t('project')} Details", 'edit', edit_project_path(item), 'data-tooltip' => tooltip("Edit project title, status, web page, and more")) -%>
   <% end -%>
   <% if admin_logged_in? -%>
+
     <% if item.can_delete?(current_user) -%>
       <%= button_link_to("Delete #{text_for_resource item}", 'destroy', url_for(item),
                          { data: { confirm: 'Are you sure?' }, method: :delete }) -%>
@@ -43,13 +44,14 @@
         <%= image('destroy', alt: 'Delete', class: 'disabled') %>
         Delete <%= text_for_resource item %>
       </a>
-      <%#= delete_icon(item,current_user) %>
+      <%# else %>
       <%#= button_link_to("Delete #{text_for_resource item}", 'destroy', url_for(item), %>
       <!-- <span class='disabled_icon disabled' onclick='javascript:alert(\"#{explanation}\")' data-tooltip='<%#= "#{tooltip(explanation)}" -%>' > 
-      <%# image('destroy', alt: 'Delete', class: 'disabled') %>
-      Delete <%#= text_for_resource item %> 
+        <%# image('destroy', alt: 'Delete', class: 'disabled') %>
+        Delete <%#= text_for_resource item %> 
       </span> -->
-    <% end %>
+    <% end %> 
+
   <% end -%>
 <% end -%>
 
