--- a/app/views/advanced_searches/new.html.erb
+++ b/app/views/advanced_searches/new.html.erb
@@ -1,81 +1,149 @@
 
-<%= form_for @advanced_search, html: {class: "pure-form"} do |s| %>
 
+<!--
+<h1>Browse</h1>
+<li class="dropdown" id="browse-menu">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+    <span class="hidden-md">Browse By</span>
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li role="presentation" class="dropdown-header visible-md">Browse</li>
+    <li role="presentation" class="dropdown-header"><%# <%= t("menu.yellow_pages") - %></li>
+    <li> 
+      <a href="<%#= projects_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%#= image('project', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        <%#= t("project").pluralize %>
+      </a>
+    </li>
+    <li> 
+      <a href="<%#= institutions_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%#= image('institution', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Institutions
+      </a>
+    </li>
+    <li> 
+      <a href="<%#= people_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%#= image('person', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        People
+      </a>
+    </li>
+    <li> 
+      <a href="<%#= publications_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%#= image('publication', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Publications
+      </a>
+    </li>
+    <li> 
+      <a href="<%#= documents_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%#= image('document', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Documents
+      </a>
+    </li>
+  </ul>
+</li>
+
+</br>
+-->
+<!--
 <h1>Browse</h1>
     <h4>Browse by</h4>
     <div class="field">
-        <div style="display:none">
-          <%= s.label "Browse by" %> <!-- <br /> -->
-        </div> 
-        <%= s.select :browse_type, options_for_select(search_type_options),
+        <%#= s.label :search_type %> <br />
+        <%#= s.select :browse_type, options_for_select(search_type_options,@search_type),
                 :class => "form-control" %>
     </div>
 
-    <div class="actions"><%= s.submit "Browse", class: "pure-button pure-button-primary" %></div>
-<h1>Search</h1>
+    <div class="actions"><%#= s.submit "Browse", class: "pure-button pure-button-primary" %></div>
+-->
 
-    <h4>General Fields</h4>
-    <div class="field">
-        <%= s.label :keywords %> <br />
-	<%= s.text_field :keywords %>
+<div class="panel panel-default" id="home_description">
+ <div class="panel-body">
+  <div class="row">
+    <div class="col-md-3">
+      <h4>Project Search</h4>
+      <%= form_for @advanced_search, html: {class: "pure-form"} do |s| %>
+
+        <div class="field">
+          <%= s.label :keywords %> <br />
+	  <%= s.text_field :keywords %>
+        </div>
+
+        <div class="field">
+          <%= s.label :institution %> <br />
+	  <%= s.select :institution, options_for_select(["All"] + Institution.order(:title).map{|i| i.title}) %>
+        </div>
+
+        <br/>
+
+        <div class="field">
+          <%= s.label :project_status %> <br />
+          <%= s.select :project_status, options_for_select(["All"] + Seek::Util.project_statuses), {}, {:style => 'width:50%;'} %>
+        </div>
+
+        <%= s.label "Time range for project completion" %> <br/>
+
+        <div class="field" style = "display: inline-flex;">
+	  <%= s.date_field :min_due_date -%>
+	  <p style="margin-left:5px; margin-right:5px;"> to </p>
+	  <%= s.date_field :max_due_date %>
+        </div>
+
+        <br/>
+        <br/>
+
+        <%= s.hidden_field :search_type, value: 'projects' %>
+        <div class="actions"><%= s.submit "Search", class: "pure-button pure-button-primary" %></div>
+      <% end %>
     </div>
+    <div class="col-md-3">
+      <h4>Person Search</h4> 
+      <%= form_for @advanced_search, html: {class: "pure-form"} do |s| %>
 
-    <div class="field">
-        <%= s.label :search_type %> <br />
-        <%= s.select :search_type, options_for_select(search_type_options),
-		:class => "form-control" %>
-    </div>
+        <div class="field">
+          <%= s.label :keywords %> <br />
+          <%= s.text_field :keywords %>
+        </div>
 
-    <div class="field">
-        <%= s.label :institution %> <br />
-	<%= s.select :institution, options_for_select(["All"] + Institution.order(:title).map{|i| i.title}) %>
-    </div>
+        <div class="field">
+          <%= s.label :institution %> <br />
+          <%= s.select :institution, options_for_select(["All"] + Institution.order(:title).map{|i| i.title}) %>
+        </div>
 
-    <br/>
+        <div class="field">
+          <%= s.label :discipline %> <br />
+          <%= s.select :discipline, options_for_select(["All"] + Discipline.order(:title).map{|d| d.title}) %>
+        </div>
 
-    <h4>Project Specific Fields</h4> 
-    <div class="field">
-        <%= s.label :project_status %> <br />
-        <%= s.select :project_status, options_for_select(["All"] + Seek::Util.project_statuses) %>
-    </div>
+        <div class="field">
+          <%= s.label "Associated tools" %> <br />
+	  <%= s.text_field :tool %>
+        </div>
 
-    <%= s.label "Time range for project completion" %> <br/>
+        <%
+          all_tags,item_tags = fetch_tags_for_item Person.new,"tool"
+          type = "tool"
+          name = "tool"
+          no_tags_message = "There are no tags to search for"
+          all_tags.sort_by(&:text)
+          input_name = "#{name}_list"
+          existing_tags = item_tags.map {|t| t.text} 
+        %>
 
-    <div class="field" style = "display: inline-flex;">
-	<%= s.date_field :min_due_date -%>
-	<p style="margin-left:5px; margin-right:5px;"> to </p>
-	<%= s.date_field :max_due_date %>
-    </div>
-
-    <br/>
-    <br/>
-
-
-    <h4>Person Specific Fields</h4> 
-
-    <div class="field">
-        <%= s.label :discipline %> <br />
-	<%= s.select :discipline, options_for_select(["All"] + Discipline.order(:title).map{|d| d.title}) %>
-    </div>
-
-    <div class="field">
-        <%= s.label :tool %> <br />
-	<%= s.text_field :tool %>
-    </div>
-
-    <%
-      all_tags,item_tags = fetch_tags_for_item Person.new,"tool"
-      type = "tool"
-      name = "tool"
-      no_tags_message = "There are no tags to search for"
-      all_tags.sort_by(&:text)
-      input_name = "#{name}_list"
-      existing_tags = item_tags.map {|t| t.text} 
-    %>
-
-    <div style="display: none;">
-      <%= tags_input(input_name, existing_tags, :typeahead => {:type => type}) %>
-    </div>
+        <div style="display: none;">
+          <%= tags_input(input_name, existing_tags, :typeahead => {:type => type}) %>
+        </div>
 
     <%# cache "suggestions_for_#{name}", skip_digest: true do %>
       <%
@@ -100,6 +168,9 @@
                     <% end -%>
                     <br/>
                     <br/>
+                    <br/>
+                    <br/>
+                    <br/>
                 <% end -%>
               </div>
             </div>
@@ -111,10 +182,10 @@
 
 
 
-    <div class="field">
-        <%= s.label :expertise %> <br />
-	<%= s.text_field :expertise %>
-    </div>
+        <div class="field">
+          <%= s.label :expertise %> <br />
+	  <%= s.text_field :expertise %>
+        </div>
 
     <%
       all_tags,item_tags = fetch_tags_for_item Person.new,"expertise"
@@ -126,9 +197,9 @@
       existing_tags = item_tags.map {|t| t.text} 
     %>
 
-    <div style="display: none;">
-      <%= tags_input(input_name, existing_tags, :typeahead => {:type => type}) %>
-    </div>
+        <div style="display: none;">
+          <%= tags_input(input_name, existing_tags, :typeahead => {:type => type}) %>
+        </div>
  
     <%# cache "suggestions_for_#{name}", skip_digest: true do %>
       <%
@@ -161,7 +232,10 @@
     <%# end -%>
 
     <br/>
-
-    <div class="actions"><%= s.submit "Search", class: "pure-button pure-button-primary" %></div>
-
-<% end %>
+        <%= s.hidden_field :search_type, value: 'people' %>
+        <div class="actions"><%= s.submit "Search", class: "pure-button pure-button-primary" %></div>
+      <% end %>
+    </div>
+  </div>
+ </div>
+</div>
