--- a/app/views/layouts/navbar/_browse_menu.html.erb
+++ b/app/views/layouts/navbar/_browse_menu.html.erb
@@ -1,12 +1,12 @@
 <li class="dropdown" id="browse-menu">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-    <span class="hidden-md">Browse</span>
+    <span class="hidden-md">Discover</span>
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li role="presentation" class="dropdown-header visible-md">Browse</li>
-    <!-- <li role="presentation" class="dropdown-header"><%# <%= t("menu.yellow_pages") - %></li>-->
+    <!-- <li role="presentation" class="dropdown-header visible-md">Browse</li>
+    <li role="presentation" class="dropdown-header"><%# <%= t("menu.yellow_pages") - %></li>-->
     <li> 
       <a href="<%= projects_path %>">
         <span style = "float:left; margin-right:5px;">
@@ -45,6 +45,14 @@
 	  <%= image('document', {height: "20", width: "20", class: "rounded"} ) -%>
 	</span>
         Documents
+      </a>
+    </li>
+    <li> 
+      <a href="<%= new_advanced_search_path %>">
+        <span style = "float:left; margin-right:5px;">
+	  <%= image('search', {height: "20", width: "20", class: "rounded"} ) -%>
+	</span>
+        Advanced Search
       </a>
     </li>
 
