--- a/app/views/layouts/navbar/_help_menu.html.erb
+++ b/app/views/layouts/navbar/_help_menu.html.erb
@@ -1,11 +1,11 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-    <span class="hidden-md"><%= t("menu.documentation") -%></span>
+    <!-- <span class="hidden-md"><%#= t("menu.documentation") -%></span> -->
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li role="presentation" class="dropdown-header visible-md-block"><%= t("menu.documentation") -%></li>
+    <!-- <li role="presentation" class="dropdown-header visible-md-block"><%#= t("menu.documentation") -%></li> -->
     <li><%= link_to t("menu.help"), help_documents_path, :target => "_blank" -%></li>
     <% if Seek::Config.internal_help_enabled %>
       <li><%= link_to t("menu.faq"), help_documents_path + '/faq' -%></li>
