--- a/app/views/layouts/navbar/_user_menu.html.erb
+++ b/app/views/layouts/navbar/_user_menu.html.erb
@@ -27,10 +27,10 @@ $(document).ready(function(){
         <% else %>
             <%= image_tag avatar_url(current_person, current_person.avatar_id, 18) %>
         <% end %>
-        <span class="truncated-name" style="max-width: 12em"><%= current_person.name %></span>
+        <!-- <span class="truncated-name" style="max-width: 12em"><%#= current_person.name %></span> -->
         <span class="caret"></span>
       </a>
-      <ul class="dropdown-menu" style="width:104%;" role="menu">
+      <ul class="dropdown-menu" style="width:110%;" role="menu">
         <li><%= link_to 'My profile', person_path(current_person) -%></li>
 	<% if false %>
           <li><%= link_to 'Edit profile', edit_person_path(current_person) -%></li>
